# med-rag

./: .env.example  .gitignore  Modelfile  README.md  pyproject.toml
configs/: default.yaml
configs/experiments/: baseline.yaml  chunk256.yaml  dense_rerank.yaml  hybrid.yaml  hybrid_rerank.yaml  section.yaml  sparse.yaml  tuned.yaml
data/gold/: diabetes_qa.draft.jsonl  diabetes_qa.jsonl
migrations/: 001_init.sql
src/: __init__.py  cli.py  config.py  db.py  models.py
src/embed/: __init__.py  embedder.py
src/eval/: __init__.py  dataset.py  generate_gold.py  judge.py  metrics.py  parsing.py  report.py  runner.py
src/generate/: __init__.py  answer.py  llm.py  prompt.py
src/ingest/: __init__.py  chunkers.py  clean.py  loaders.py  pipeline.py
src/retrieve/: __init__.py  dense.py  hybrid.py  rerank.py  search.py  sparse.py
src/store/: __init__.py  pgvector_store.py
tests/: test_clean.py  test_cli.py  test_eval_core.py  test_store.py
